Update on Overleaf.

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -76,3 +76,12 @@
   journal={arXiv preprint arXiv:1911.13292},
   year={2019}
 }
+
+@inproceedings{
+martens2018kroneckerfactored,
+title={Kronecker-factored Curvature Approximations for Recurrent Neural Networks},
+author={James Martens and Jimmy Ba and Matt Johnson},
+booktitle={International Conference on Learning Representations},
+year={2018},
+url={https://openreview.net/forum?id=HyMTkQZAb},
+}
