--- a/paper/sections/laplacian_feedforward_nn.tex
+++ b/paper/sections/laplacian_feedforward_nn.tex
@@ -474,15 +474,23 @@ self-outer product forms the Gramian for a linear layer, as
   \end{split}
 \end{align*}
 where (1) is the contribution from the forward pass, (2) is the contribution from the gradient backpropagation, and (3) is the contribution from the Hessian backpropagation.
-\toodoo{Visualize the different contributions on a $3\times 3$ grid.}
 
-The Jacobians from \Cref{eq:fisher-jacobians} allow to express the Fisher in
-terms of Kronecker-structured expressions consisting of 9 terms in total.
+\input{figures/gramian_per_child.tex}
 
-\toodoo{F.D.\,Write down the full expression for the Fisher.
-  Propose ways to Kronecker-approximate each of the 9 terms, such that we end up with a single Kronecker product in the end.}
+The Jacobians from \Cref{eq:fisher-jacobians} allow to express the Fisher in terms of Kronecker-structured expressions consisting of 9 terms in total.
+For the off-diagonal terms, which stem from two different children, we combine the two terms that involve the same children into a symmetric term.
+\Cref{fig:gramian-contribution-children} shows the resulting 6 terms.
 
+\input{figures/gramian_sum_children.tex}
 
+\Cref{fig:gramian-contribution-summed-children} shows an alternative comparison where we group the terms stemming from two identical and two different nodes (that is the diagonals and off-diagonals of \Cref{eq:fisher-jacobians}) into one matrix.
+For the Gramian's block diagonal (leftmost panel), we can see that the contribution from identical nodes (center panel) is larger than that of different nodes (rightmost panel).
+This is a first promising observation: Since we tackle the approximation of the Gramian's block diagonal, we can focus on the contributions from identical nodes.
+These are also simpler to compute because they can be computed at one stage of backpropagation.
+
+\toodoo{F.D.\,Write down the full expression for the Fisher, grouping the terms with identical and non-identical children.}
+
+\toodoo{Propose ways to Kronecker-approximate the terms from identical children in to a single Kronecker product.}
 
 \paragraph{Computing $\grad{\textcolor{blue}{\bullet}}\Delta u$}
 The terms $\grad{\textcolor{blue}{\bullet}}\Delta u$ are automatically computed when computing the gradient of the loss via backdrop.
